# cpp_template

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  setup.sh
src/: Main.cpp  hello.h
test/: ExampleTest.cpp
